# ccmlutils

./: .gitignore  pyproject.toml
ccmlutils/: __init__.py  __main__.py
ccmlutils/callbacks/: callback_factories.py  ccmlprojectcallback.py  gitversioncallback.py
ccmlutils/datasets/: imagedata.py  kerasmodeldataset.py
ccmlutils/framework/: cli.py
ccmlutils/procedures/: defaulttest.py  defaulttrain.py
ccmlutils/utilities/: chartutils.py  datasetutils.py  experimentdata.py  metricutils.py  yamlutil.py
