[tool.poetry]
name = "ccmlutils"
version = "1.0.0"
description = "Use this repo in combination with ccmlsample to start your ml project right away"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.7.1"
tensorflow = "^2.4.0"
PyYAML = "^5.3.1"
kedro = "^0.17.0"
altair = "^4.1.0"
scikit-learn = "^0.24.0"
fastparquet = "^0.5.0"
pandas = "^1.2.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
